# kunpeng-reader

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE_NOTES_v1.9.1.md  RELEASE_NOTES_v1.9.2.md  tauri.conf.json  开发文档.md  开发记录.md
.github/workflows/: ci.yml  macos-build.yml
capabilities/: default.json
icons/: icon.icns
scripts/: build-fast.ps1  build-release.ps1  check.ps1  release.ps1
server/reader-sync-api/: app.py  test_app.py
src/: app_commands.rs  atomic_file.rs  background_tasks.rs  backup.rs  book.rs  data_commands.rs  data_migration.rs  db.rs  diagnostics.rs  dict.rs  epub_runtime.rs  epub_toc.rs  external_dict.rs  hownet.rs  html_sanitize.rs  import.rs  import_core.rs  library_commands.rs  main.rs  memory_budget.rs  pdf_support.rs  reader_commands.rs  reader_page.rs  reader_protocol.rs  runtime_support.rs  search.rs  search_cache.rs  search_core.rs  search_index.rs  secret_store.rs  semantic.rs  semantic_core.rs  semantic_tasks.rs  smoke_tests.rs  startup.rs  stats.rs  stats_core.rs  sync.rs  sync_core.rs  text_chapters.rs  (+7 more)
src/dict/: FREQUENCY_SOURCE.md  HOWNET_SOURCE.md  frequent_en_10000.txt
src/semantic/: accelerator.rs  batch.rs  build.rs  index_runtime.rs  model.rs  profile.rs  search.rs  status.rs  vector.rs
tools/: export_hownet_tsv.py
ui/: app.js  code-stats.css  code-stats.html  code-stats.js  debug-ui.js  index.html  pdfview.html  pdfview.js  reader-cross-search-ui.js  reader-message.js  reader-notes-ui.js  reader-page-annotations.js  reader-page-head.html  reader-page-layout.js  reader-page-measurement.js  reader-page-pagination.js  reader-page-runtime.js  reader-page-style.html  reader-search-ui.js  reader-settings-ui.js  reader-shell-state.js  reader.html  reader.js  search-ui.js  search.html  search.js  semantic-status-cache.js  semantic-ui.js  shelf-ui.js  startup-perf.js  stats-ui.js  styles.css  sync-ui.js  titlebar.js  vocab-ui.js
ui/tests/: code-stats.test.cjs  debug-diagnostics.test.cjs  governance.test.cjs  reader-large-chapter.test.cjs  reader-message.test.cjs  reader-page-modules.test.cjs  reader-shell-state.test.cjs  reader-toolbar.test.cjs  search-ui-session.test.cjs  semantic-model-ui.test.cjs  shelf-ui.test.cjs  stats-ui.test.cjs  sync-ui.test.cjs
