[package]
name = "ebook-reader-tauri"
version = "1.7.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2" }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
epub = "2"
image = "0.25"
encoding_rs = "0.8"
chardetng = "0.1"
memchr = "2"
fastembed = "4"
instant-distance = { version = "0.6", features = ["with-serde"] }
bincode = "1"
pdf-extract = "0.7"
lopdf = "0.34"
chrono = "0.4"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
sha2 = "0.10"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
flate2 = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
mobi = "0.8"

# 正式发布档：保留优化，同时加快日常 release 构建。
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
incremental = true
