[package]
name = "ebook-reader-tauri"
version = "1.8.9"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
epub = "2"
image = "0.25"
encoding_rs = "0.8"
chardetng = "0.1"
memchr = "2"
fastembed = "4"
instant-distance = { version = "0.6", features = ["with-serde"] }
bincode = "1"
pdf-extract = "0.12"
lopdf = "0.44"
chrono = "0.4"
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
sha2 = "0.11"
base64 = "0.22"
ureq = { version = "2", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
flate2 = "1"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
mobi = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
zip = "3.0.0"
ammonia = "4.1"

# 正式发布档：保留优化，同时加快日常 release 构建。
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
incremental = true

# 日常体验档：保留 Windows GUI 子系统（不弹控制台），比正式 release 更快。
[profile.fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
incremental = true
debug = false
strip = false
